Add textex in elements

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prompts",
+  name": "prompts-ex",
   "version": "2.1.0",
   "description": "Lightweight, beautiful and user-friendly prompts",
   "license": "MIT",
